--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=IBM+Plex+Mono:wght@300&family=Montserrat:wght@900&family=Open+Sans:ital,wght@0,400;0,700;1,400&family=Varela+Round&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styl22e.css">
+    <link rel="stylesheet" href="style.css">
     <script>
         window.alert('Olá, usuário! Este site ainda não está finalizado e é apenas 4fun. Estarei deixando os créditos com o link para o site original no rodapé')
     </script>
